# alligator

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  clickable.json  compile_commands.json  manifest.json.in  org.kde.alligator.appdata.xml  org.kde.alligator.desktop  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle
android/res/drawable-v24/: ic_launcher_monochrome.xml
autotests/: CMakeLists.txt
po/ar/: alligator.po
po/ast/: alligator.po
po/ca/: alligator.po
po/ca@valencia/: alligator.po
po/cs/: alligator.po
po/de/: alligator.po
po/en_GB/: alligator.po
po/eo/: alligator.po
po/es/: alligator.po
po/et/: alligator.po
po/eu/: alligator.po
po/fi/: alligator.po
po/fr/: alligator.po
po/ga/: alligator.po
po/gl/: alligator.po
po/he/: alligator.po
po/hi/: alligator.po
po/hu/: alligator.po
po/ia/: alligator.po
po/it/: alligator.po
po/ja/: alligator.po
po/ka/: alligator.po
po/ko/: alligator.po
po/lt/: alligator.po
po/lv/: alligator.po
po/nl/: alligator.po
po/nn/: alligator.po
po/pa/: alligator.po
po/pl/: alligator.po
po/pt/: alligator.po
po/pt_BR/: alligator.po
po/ru/: alligator.po
po/sa/: alligator.po
po/sk/: alligator.po
po/sl/: alligator.po
po/sv/: alligator.po
po/tr/: alligator.po
po/ug/: alligator.po
po/uk/: alligator.po
po/x-test/: alligator.po
po/zh_CN/: alligator.po
po/zh_TW/: alligator.po
src/: CMakeLists.txt  Messages.sh  about.h  alligatorsettings.kcfg  alligatorsettings.kcfgc  clipboard.cpp  clipboard.h  contenthelper.cpp  contenthelper.h  database.cpp  database.h  entriesmodel.cpp  entriesmodel.h  entriesproxymodel.cpp  entriesproxymodel.h  entry.cpp  entry.h  feed.cpp  feed.h  feedgroupsmodel.cpp  feedgroupsmodel.h  feedsmodel.cpp  feedsmodel.h  feedsproxymodel.cpp  feedsproxymodel.h  fetcher.cpp  fetcher.h  main.cpp  resources.qrc
src/qml/: AddFeedDialog.qml  AddFeedSheet.qml  AlligatorGlobalDrawer.qml  EditFeedDialog.qml  EditFeedSheet.qml  EntryListDelegate.qml  EntryListHeader.qml  EntryListPage.qml  EntryPage.qml  FeedDetailsPage.qml  FeedGroupDialog.qml  FeedGroupSheet.qml  FeedListDelegate.qml  FeedListPage.qml  GroupsListPage.qml  Main.qml  SettingsPage.qml  main.qml
